--- a/ch1_all_nmds.Rmd
+++ b/ch1_all_nmds.Rmd
@@ -228,11 +228,16 @@ nmds_total.nmds2_coord <- nmds_total.nmds2_fit %>%
   as.data.frame() %>% 
   rownames_to_column("species") %>% 
   full_join(., nmds_total.nmds2_pvals, by = "species") %>% 
-  filter(pvals > 0.02) %>% 
+  #filter(pvals <= 1) %>% 
   filter(pvals  <= 0.05) %>% # <-- set p-value level here: 0.05, 0.008
+  #filter(grepl("^(Art)", species)) %>% 
+  #filter(grepl("^(Het)", species)) %>% 
+  #filter(grepl("^(Salvia l)", species)) %>% 
+  #filter(grepl("^(Rhamnus ilicifolia)", species)) %>% 
   filter(!species == 'standtype_ID')
 dim(nmds_total.nmds2_coord) # <-- limit number of vectors to <7 for clarity
-#write.csv(nmds_total.nmds2_coord,"Ch1_Degradation_figures/nmds2_pval.1.csv")
+
+#write.csv(nmds_total.nmds2_coord,"processed/nmds_all_pvalues.csv")
 
 # plot: nmds x hillslopes + labels 
 total_nmds2_hillslope_vectors <- ggplot(nmds_total.nmds2_plot %>% # output of scores()
@@ -252,7 +257,7 @@ total_nmds2_hillslope_vectors <- ggplot(nmds_total.nmds2_plot %>% # output of sc
                 col = "black") +
    geom_text(data = nmds_total.nmds2_coord, 
              aes(label = species),  
-             position = position_jitter(width = 0.4, height = 0.2), # spp label jitter
+             position = position_jitter(width = 0.0, height = 0.3), # spp label jitter
              size = 3) + # Adjust font size for vector labels
   labs(x = "NMDS1", y = "NMDS2", title = "Community composition (0.02 < p <=0.05) by hillslope percent cover, shrub density, seed density") +
  theme(axis.text.x = element_text(size = 10),  # Adjust font size for x-axis labels
